[Aymeric] Ajout des rapports de posologie
