# ProjetMinuteMed/src/main/webapp/swagger/swagger.json
@@ -1731,6 +1731,31 @@
         }
       }
     },
+    "/records/{idRecord}/reportDosage" : {
+      "post" : {
+        "tags" : [ "MedicalRecords REST Endpoint" ],
+        "summary" : "Create a ResultExam in the Medical Record associated",
+        "description" : "",
+        "operationId" : "createReportDosage",
+        "consumes" : [ "application/json" ],
+        "produces" : [ "application/json" ],
+        "parameters" : [ {
+          "name" : "idRecord",
+          "in" : "path",
+          "required" : true,
+          "type" : "integer",
+          "format" : "int64"
+        } ],
+        "responses" : {
+          "201" : {
+            "description" : "The ResultExam is created !"
+          },
+          "400" : {
+            "description" : "Invalid input"
+          }
+        }
+      }
+    },
     "/records/{idRecord}/resultExam" : {
       "post" : {
         "tags" : [ "MedicalRecords REST Endpoint" ],
